--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 dist
 node_modules
+.DS_Store
+node_modules/
+/dist_release/
+/dist_testing/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
